--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,9 @@ GEMINI_API_KEY="YOUR_GEMINI_KEY"
 
 # Optional overrides
 GEMINI_MODEL="models/gemini-2.5-flash"
-GEMINI_MODEL_PREFERRED="models/gemini-2.5-flash,models/gemini-2.0-flash"
-GEMINI_TIMEOUT_SECONDS=20
-GEMINI_MAX_OUTPUT_TOKENS=1024
-GEMINI_LOG_MODELS_ON_START=true
 
-# Rule thresholds (tuning points)
-RULE_MIN_CONTENT_LENGTH=50
-RULE_MAX_CONTENT_LENGTH=5000
-RULE_MAX_REPEAT_WORD_RATIO=0.35
-RULE_MAX_REPEATED_SENTENCES=3
-RULE_MAX_NOISE_CHAR_RATIO=0.25
-RULE_MAX_LINKS_OR_TAGS=2
+ENABLE_RECO_SCHEDULER=true
+RECO_SCHEDULER_CRON=0 3 * * 1    # 매주 월요일 03:00
+RECO_SCHEDULER_TZ=Asia/Seoul
+RECO_SCHEDULER_TOP_K=4
+RECO_SCHEDULER_SEARCH_K=20
