--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ python-dotenv==1.0.1
 numpy==1.26.4
 pandas==2.2.2
 
-sentence-transformers==3.0.1
+sentence-transformers==3.3.1
 faiss-cpu==1.8.0.post1
 
 SQLAlchemy==2.0.32
@@ -16,3 +16,6 @@ PyMySQL==1.1.1
 google-genai==0.3.0
 tenacity==8.5.0
 requests==2.32.3
+cryptography==42.0.8
+apscheduler==3.10.4
+pytz==2024.1
