--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi == 0.128.0
+# ... 기존 패키지들 ...
+fastapi==0.128.0
 uvicorn[standard]==0.30.6
 pydantic==2.8.2
 pydantic-settings==2.4.0
@@ -7,6 +8,7 @@ python-dotenv==1.0.1
 numpy==1.26.4
 pandas==2.2.2
 
+# sentence-transformers는 유지하되, 설치 순서를 스크립트에서 제어함
 sentence-transformers==3.0.1
 faiss-cpu==1.8.0.post1
 
@@ -15,3 +17,6 @@ PyMySQL==1.1.1
 
 google-genai==0.3.0
 tenacity==8.5.0
+
+
+google-api-core
