--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ RECO_SCHEDULER_CRON=0 3 * * 1    # 매주 월요일 03:00
 RECO_SCHEDULER_TZ=Asia/Seoul
 RECO_SCHEDULER_TOP_K=4
 RECO_SCHEDULER_SEARCH_K=20
+
+API_KEY="x-api-key"
