fix: 독후감 최대 길이 수정

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ RECO_SCHEDULER_TOP_K=4
 RECO_SCHEDULER_SEARCH_K=20
 
 API_KEY="x-api-key"
+
+# Book report validation rules
+RULE_MAX_CONTENT_LENGTH=200
