--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -5,130 +5,181 @@ on:
     branches:
       - develop
       - main
-#  pull_request:
-#    branches:
-#      - develop
-#      - main
+  pull_request:
+    branches:
+      - develop
+      - main
 
 concurrency:
   group: ai-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-#  check-source-branch:
-#    if: github.event_name == 'pull_request' && github.base_ref == 'main'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Validate source branch
-#        run: |
-#          if [ "${{ github.head_ref }}" != "develop" ] && [[ "${{ github.head_ref }}" != hotfix/* ]]; then
-#            echo "❌ Error: Only 'develop' or 'hotfix/*' branches can be merged into 'main'"
-#            echo "Source branch: ${{ github.head_ref }}"
-#            exit 1
-#          fi
-#          echo "✅ Source branch validation passed: ${{ github.head_ref }}"
-#
-#  ci:
-#    needs: [check-source-branch]
-#    if: always() && (needs.check-source-branch.result == 'success' || needs.check-source-branch.result == 'skipped')
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v4
-#
-#      - name: Set up Python 3.10
-#        uses: actions/setup-python@v5
-#        with:
-#          python-version: "3.10"
-#          cache: "pip"
-#
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#
-#          # [CI 필수 수정] requirements.txt에서 torch가 빠졌으므로, CI에서 테스트 돌리려면 따로 설치해줘야 함
-#          if [ -f "requirements-torch.txt" ]; then
-#            pip install -r requirements-torch.txt --index-url https://download.pytorch.org/whl/cpu
-#          fi
-#
-#          pip install -r requirements.txt
-#          pip install ruff pytest
-#
-#      - name: Lint with Ruff
-#        continue-on-error: true
-#        run: ruff check . --output-format=github
-#
-#      - name: Format check with Ruff
-#        continue-on-error: true
-#        run: ruff format --check .
-#
-#      - name: Run tests
-#        continue-on-error: true
-#        run: |
-#          pytest --tb=short -q || echo "::warning::Tests failed or no tests found"
-#
-#      - name: Notify Discord on failure
-#        if: failure()
-#        run: |
-#          COMMIT_SHA="${{ github.sha }}"
-#          SHORT_SHA="${COMMIT_SHA:0:7}"
-#          COMMIT_MSG=$(echo '${{ github.event.head_commit.message }}' | head -1)
-#          COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
-#          COMMIT_URL="${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}"
-#          ACTIONS_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-#
-#          curl -H "Content-Type: application/json" \
-#               -X POST \
-#               -d "{
-#                 \"content\": \"❌ **AI Server CI 빌드 실패**\",
-#                 \"embeds\": [{
-#                   \"title\": \"🔴 빌드 실패 알림\",
-#                   \"color\": 15158528,
-#                   \"fields\": [
-#                     {\"name\": \"📦 저장소\", \"value\": \"\`${{ github.repository }}\`\", \"inline\": true},
-#                     {\"name\": \"🌿 브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"inline\": true},
-#                     {\"name\": \"🔖 커밋\", \"value\": \"[\`$SHORT_SHA\`]($COMMIT_URL)\", \"inline\": true},
-#                     {\"name\": \"💬 커밋 메시지\", \"value\": \"$COMMIT_MSG\", \"inline\": false},
-#                     {\"name\": \"👤 작성자\", \"value\": \"$COMMIT_AUTHOR\", \"inline\": true},
-#                     {\"name\": \"📋 상세 로그\", \"value\": \"[Actions에서 확인]($ACTIONS_URL)\", \"inline\": true}
-#                   ],
-#                   \"timestamp\": \"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
-#                 }]
-#               }" \
-#               ${{ secrets.DISCORD_WEBHOOK_URL }} || true
+  check-source-branch:
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Validate source branch
+        run: |
+          if [ "${{ github.head_ref }}" != "develop" ] && [[ "${{ github.head_ref }}" != hotfix/* ]]; then
+            echo "❌ Error: Only 'develop' or 'hotfix/*' branches can be merged into 'main'"
+            echo "Source branch: ${{ github.head_ref }}"
+            exit 1
+          fi
+          echo "✅ Source branch validation passed: ${{ github.head_ref }}"
+
+  ci:
+    needs: [check-source-branch]
+    if: always() && (needs.check-source-branch.result == 'success' || needs.check-source-branch.result == 'skipped')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+
+          if [ -f "requirements-torch.txt" ]; then
+            pip install -r requirements-torch.txt --index-url https://download.pytorch.org/whl/cpu
+          fi
+
+          pip install -r requirements.txt
+          pip install ruff pytest
+
+      - name: Lint with Ruff
+        continue-on-error: true
+        run: ruff check . --output-format=github
+
+      - name: Format check with Ruff
+        continue-on-error: true
+        run: ruff format --check .
+
+      - name: Run tests
+        continue-on-error: true
+        run: |
+          pytest --tb=short -q || echo "::warning::Tests failed or no tests found"
+
+      - name: Notify Discord on failure
+        if: failure()
+        run: |
+          COMMIT_SHA="${{ github.sha }}"
+          SHORT_SHA="${COMMIT_SHA:0:7}"
+          COMMIT_MSG=$(echo '${{ github.event.head_commit.message }}' | head -1)
+          COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
+          COMMIT_URL="${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}"
+          ACTIONS_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d "{
+                 \"content\": \"❌ **AI Server CI 빌드 실패**\",
+                 \"embeds\": [{
+                   \"title\": \"🔴 빌드 실패 알림\",
+                   \"color\": 15158528,
+                   \"fields\": [
+                     {\"name\": \"📦 저장소\", \"value\": \"\`${{ github.repository }}\`\", \"inline\": true},
+                     {\"name\": \"🌿 브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"inline\": true},
+                     {\"name\": \"🔖 커밋\", \"value\": \"[\`$SHORT_SHA\`]($COMMIT_URL)\", \"inline\": true},
+                     {\"name\": \"💬 커밋 메시지\", \"value\": \"$COMMIT_MSG\", \"inline\": false},
+                     {\"name\": \"👤 작성자\", \"value\": \"$COMMIT_AUTHOR\", \"inline\": true},
+                     {\"name\": \"📋 상세 로그\", \"value\": \"[Actions에서 확인]($ACTIONS_URL)\", \"inline\": true}
+                   ],
+                   \"timestamp\": \"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
+                 }]
+               }" \
+               ${{ secrets.DISCORD_WEBHOOK_URL }} || true
 
   deploy:
-#    needs: ci
-#    if: |
-#      always() &&
-#      needs.ci.result == 'success' &&
-#      github.event_name == 'push'
+    needs: ci
+    if: |
+      always() &&
+      needs.ci.result == 'success' &&
+      github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - name: Set environment
         id: env
         run: |
+          set -euo pipefail
+
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "host=EC2_HOST" >> $GITHUB_OUTPUT
             echo "env_name=prod" >> $GITHUB_OUTPUT
+            echo "deploy_target=lightsail" >> $GITHUB_OUTPUT
+            echo "ssh_host=${{ secrets.PROD_LIGHTSAIL_HOST }}" >> $GITHUB_OUTPUT
+            echo "lightsail_instance_name=${{ secrets.PROD_LIGHTSAIL_INSTANCE_NAME }}" >> $GITHUB_OUTPUT
           else
-            echo "host=DEV_EC2_HOST" >> $GITHUB_OUTPUT
             echo "env_name=develop" >> $GITHUB_OUTPUT
+            echo "deploy_target=ec2" >> $GITHUB_OUTPUT
+            echo "ssh_host=${{ secrets.DEV_EC2_HOST }}" >> $GITHUB_OUTPUT
+            echo "sg_id=${{ secrets.AWS_SG_ID_DEV }}" >> $GITHUB_OUTPUT
           fi
+
+      - name: Get GitHub IP
+        id: ip
+        run: |
+          set -euo pipefail
+          IPV4="$(curl -s https://checkip.amazonaws.com | tr -d '\n')"
+          echo "ipv4=$IPV4" >> $GITHUB_OUTPUT
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Add GitHub IP to EC2 Security Group (SSH)
+        if: ${{ steps.env.outputs.deploy_target == 'ec2' }}
+        run: |
+          aws ec2 authorize-security-group-ingress \
+            --group-id ${{ steps.env.outputs.sg_id }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ steps.ip.outputs.ipv4 }}/32 || true
+
+      - name: Allow GitHub IP on Lightsail (SSH)
+        if: ${{ steps.env.outputs.deploy_target == 'lightsail' }}
+        run: |
+          aws lightsail open-instance-public-ports \
+            --instance-name ${{ steps.env.outputs.lightsail_instance_name }} \
+            --port-info fromPort=22,toPort=22,protocol=tcp,cidrs=${{ steps.ip.outputs.ipv4 }}/32 || true
 
       - name: Deploy via Git Pull
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ steps.env.outputs.host == 'EC2_HOST' && secrets.EC2_HOST || secrets.DEV_EC2_HOST }}
+          host: ${{ steps.env.outputs.ssh_host }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu/app/ai-repo
-            
+
             git fetch --all
             git reset --hard origin/${{ github.ref_name }}
-            
-            bash /home/ubuntu/app/deploy.sh ai ${{ steps.env.outputs.env_name }}
+
+            bash /home/ubuntu/app/deploy.sh ai ${{ steps.env.outputs.env_name }} ${{ github.sha }}
+
+      - name: Remove GitHub IP from EC2 Security Group (SSH)
+        if: always() && steps.env.outputs.deploy_target == 'ec2'
+        run: |
+          aws ec2 revoke-security-group-ingress \
+            --group-id ${{ steps.env.outputs.sg_id }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ steps.ip.outputs.ipv4 }}/32 || true
+
+      - name: Close GitHub IP on Lightsail (SSH)
+        if: always() && steps.env.outputs.deploy_target == 'lightsail'
+        run: |
+          aws lightsail close-instance-public-ports \
+            --instance-name ${{ steps.env.outputs.lightsail_instance_name }} \
+            --port-info fromPort=22,toPort=22,protocol=tcp,cidrs=${{ steps.ip.outputs.ipv4 }}/32 || true
 
       - name: Notify Discord
         if: always()
