--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,80 +28,80 @@ jobs:
           fi
           echo "✅ Source branch validation passed: ${{ github.head_ref }}"
 
-  ci:
-    needs: [check-source-branch]
-    if: always() && (needs.check-source-branch.result == 'success' || needs.check-source-branch.result == 'skipped')
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pip"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-
-          if [ -f "requirements-torch.txt" ]; then
-            pip install -r requirements-torch.txt --index-url https://download.pytorch.org/whl/cpu
-          fi
-
-          pip install -r requirements.txt
-          pip install ruff pytest
-
-      - name: Lint with Ruff
-        continue-on-error: true
-        run: ruff check . --output-format=github
-
-      - name: Format check with Ruff
-        continue-on-error: true
-        run: ruff format --check .
-
-      - name: Run tests
-        continue-on-error: true
-        run: |
-          pytest --tb=short -q || echo "::warning::Tests failed or no tests found"
-
-      - name: Notify Discord on failure
-        if: failure()
-        run: |
-          COMMIT_SHA="${{ github.sha }}"
-          SHORT_SHA="${COMMIT_SHA:0:7}"
-          COMMIT_MSG=$(echo '${{ github.event.head_commit.message }}' | head -1)
-          COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
-          COMMIT_URL="${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}"
-          ACTIONS_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-
-          curl -H "Content-Type: application/json" \
-               -X POST \
-               -d "{
-                 \"content\": \"❌ **AI Server CI 빌드 실패**\",
-                 \"embeds\": [{
-                   \"title\": \"🔴 빌드 실패 알림\",
-                   \"color\": 15158528,
-                   \"fields\": [
-                     {\"name\": \"📦 저장소\", \"value\": \"\`${{ github.repository }}\`\", \"inline\": true},
-                     {\"name\": \"🌿 브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"inline\": true},
-                     {\"name\": \"🔖 커밋\", \"value\": \"[\`$SHORT_SHA\`]($COMMIT_URL)\", \"inline\": true},
-                     {\"name\": \"💬 커밋 메시지\", \"value\": \"$COMMIT_MSG\", \"inline\": false},
-                     {\"name\": \"👤 작성자\", \"value\": \"$COMMIT_AUTHOR\", \"inline\": true},
-                     {\"name\": \"📋 상세 로그\", \"value\": \"[Actions에서 확인]($ACTIONS_URL)\", \"inline\": true}
-                   ],
-                   \"timestamp\": \"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
-                 }]
-               }" \
-               ${{ secrets.DISCORD_WEBHOOK_URL }} || true
+  #  ci:
+  #    needs: [check-source-branch]
+  #    if: always() && (needs.check-source-branch.result == 'success' || needs.check-source-branch.result == 'skipped')
+  #    runs-on: ubuntu-latest
+  #    steps:
+  #      - name: Checkout code
+  #        uses: actions/checkout@v4
+  #
+  #      - name: Set up Python 3.10
+  #        uses: actions/setup-python@v5
+  #        with:
+  #          python-version: "3.10"
+  #          cache: "pip"
+  #
+  #      - name: Install dependencies
+  #        run: |
+  #          python -m pip install --upgrade pip
+  #
+  #          if [ -f "requirements-torch.txt" ]; then
+  #            pip install -r requirements-torch.txt --index-url https://download.pytorch.org/whl/cpu
+  #          fi
+  #
+  #          pip install -r requirements.txt
+  #          pip install ruff pytest
+  #
+  #      - name: Lint with Ruff
+  #        continue-on-error: true
+  #        run: ruff check . --output-format=github
+  #
+  #      - name: Format check with Ruff
+  #        continue-on-error: true
+  #        run: ruff format --check .
+  #
+  #      - name: Run tests
+  #        continue-on-error: true
+  #        run: |
+  #          pytest --tb=short -q || echo "::warning::Tests failed or no tests found"
+  #
+  #      - name: Notify Discord on failure
+  #        if: failure()
+  #        run: |
+  #          COMMIT_SHA="${{ github.sha }}"
+  #          SHORT_SHA="${COMMIT_SHA:0:7}"
+  #          COMMIT_MSG=$(echo '${{ github.event.head_commit.message }}' | head -1)
+  #          COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
+  #          COMMIT_URL="${{ github.server_url }}/${{ github.repository }}/commit/${{ github.sha }}"
+  #          ACTIONS_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+  #
+  #          curl -H "Content-Type: application/json" \
+  #               -X POST \
+  #               -d "{
+  #                 \"content\": \"❌ **AI Server CI 빌드 실패**\",
+  #                 \"embeds\": [{
+  #                   \"title\": \"🔴 빌드 실패 알림\",
+  #                   \"color\": 15158528,
+  #                   \"fields\": [
+  #                     {\"name\": \"📦 저장소\", \"value\": \"\`${{ github.repository }}\`\", \"inline\": true},
+  #                     {\"name\": \"🌿 브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"inline\": true},
+  #                     {\"name\": \"🔖 커밋\", \"value\": \"[\`$SHORT_SHA\`]($COMMIT_URL)\", \"inline\": true},
+  #                     {\"name\": \"💬 커밋 메시지\", \"value\": \"$COMMIT_MSG\", \"inline\": false},
+  #                     {\"name\": \"👤 작성자\", \"value\": \"$COMMIT_AUTHOR\", \"inline\": true},
+  #                     {\"name\": \"📋 상세 로그\", \"value\": \"[Actions에서 확인]($ACTIONS_URL)\", \"inline\": true}
+  #                   ],
+  #                   \"timestamp\": \"$(date -u +%Y-%m-%dT%H:%M:%SZ)\"
+  #                 }]
+  #               }" \
+  #               ${{ secrets.DISCORD_WEBHOOK_URL }} || true
 
   deploy:
-    needs: ci
-    if: |
-      always() &&
-      needs.ci.result == 'success' &&
-      github.event_name == 'push'
+    #    needs: ci
+    #    if: |
+    #      always() &&
+    #      needs.ci.result == 'success' &&
+    #      github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - name: Set environment
