feat: 독서 퀴즈 생성(모델 연결x)

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,22 @@ GEMINI_API_KEY="YOUR_GEMINI_KEY"
 GEMINI_MODEL="models/gemini-2.5-flash"
 
 ENABLE_RECO_SCHEDULER=true
-RECO_SCHEDULER_CRON=0 3 * * 1    # 매주 월요일 03:00
+RECO_SCHEDULER_CRON=0 3 * * 0    # 매주 월요일 03:00
 RECO_SCHEDULER_TZ=Asia/Seoul
 RECO_SCHEDULER_TOP_K=4
 RECO_SCHEDULER_SEARCH_K=20
 
 API_KEY="x-api-key"
+
+KANANA_BASE_URL="YOUR_BASE_URL"
+KANANA_MODEL="kakaocorp/kanana-1.5-8b-instruct-2505"
+KANANA_API_KEY="EMPTY"
+KANANA_TIMEOUT_SECONDS=30
+
+# Quiz retrieval (FAISS)
+BOOKS_FAISS_INDEX_PATH="data/faiss/books.index"
+BOOKS_FAISS_META_PATH="data/faiss/books.meta.json"
+BOOKS_SEARCH_TOP_K=20
+BOOKS_CONTEXT_K=4
+BOOKS_TITLE_BONUS=0.05
+BOOKS_AUTHOR_BONUS=0.05
